update task dated 24.04.2025 1st push

--- a/html-master/index.html
+++ b/html-master/index.html
@@ -183,7 +183,7 @@
             <!-- profile filter module -->
             <div class="profile-filter-module">
                 <!-- filter params module -->
-                <div class="filter-params-module">
+                <div class="filter-params-module mb-5">
                     <div class="main-wrap">
                         <!-- filter-param-field-box -->
                         <div class="filter-param-field-box min-width-1">
@@ -399,6 +399,67 @@
                     </div>
                 </div>
                 <!-- filter params module -->
+
+                <!-- filter result module -->
+                <div class="filter-result-module profile-listing mb-5-plus">
+                    <div class="main-wrap">
+                        <div class="row default-row my-row">
+                            <!-- col -->
+                            <div class="col-4 my-col">
+                                <div class="main-wrap">
+                                    <div class="dp mb-3"><img src="Images/profile-dp.jpg" class="w-100"></div>
+                                    <div class="info has-status status-light-blue"><span>Maxi Muster</span></div>
+                                </div>
+                            </div> 
+                            <!-- col -->
+                            <!-- col -->
+                            <div class="col-4 my-col">
+                                <div class="main-wrap">
+                                    <div class="dp mb-3"><img src="Images/profile-dp.jpg" class="w-100"></div>
+                                    <div class="info has-status status-red"><span>Maxi Muster</span></div>
+                                </div>
+                            </div> 
+                            <!-- col -->
+                            <!-- col -->
+                            <div class="col-4 my-col">
+                                <div class="main-wrap">
+                                    <div class="dp mb-3"><img src="Images/profile-dp.jpg" class="w-100"></div>
+                                    <div class="info has-status status-light-green"><span>Maxi Muster</span></div>
+                                </div>
+                            </div> 
+                            <!-- col -->
+                            <!-- col -->
+                            <div class="col-4 my-col">
+                                <div class="main-wrap">
+                                    <div class="dp mb-3"><img src="Images/profile-dp.jpg" class="w-100"></div>
+                                    <div class="info has-status status-dark-blue"><span>Maxi Muster</span></div>
+                                </div>
+                            </div> 
+                            <!-- col -->
+                            <!-- col -->
+                            <div class="col-4 my-col">
+                                <div class="main-wrap">
+                                    <div class="dp mb-3"><img src="Images/profile-dp.jpg" class="w-100"></div>
+                                    <div class="info has-status status-pink"><span>Maxi Muster</span></div>
+                                </div>
+                            </div> 
+                            <!-- col -->
+                            <!-- col -->
+                            <div class="col-4 my-col">
+                                <div class="main-wrap">
+                                    <div class="dp mb-3"><img src="Images/profile-dp.jpg" class="w-100"></div>
+                                    <div class="info has-status status-dark-green"><span>Maxi Muster</span></div>
+                                </div>
+                            </div> 
+                            <!-- col -->     
+                        </div>
+                    </div>
+                </div> 
+                <!-- filter result module -->
+                 
+                <!-- filter action -->
+                 <div class="filter-action pull-text-center"><a class="btn btn-primary">mehr laden</a></div>
+                <!-- filter action --> 
             </div>
             <!-- profile filter module -->
 
