update task dated 02.05.2025 1st push

--- a/html-master/index.html
+++ b/html-master/index.html
@@ -183,7 +183,7 @@
             <!-- profile filter module -->
             <div class="profile-filter-module">
                 <!-- filter params module -->
-                <div class="filter-params-module mb-5">
+                <div class="filter-params-module mb-5 d-none">
                     <div class="main-wrap">
                         <!-- filter-param-field-box -->
                         <div class="filter-param-field-box min-width-1">
@@ -458,7 +458,7 @@
                 <!-- filter result module -->
                  
                 <!-- filter action -->
-                 <div class="filter-action pull-text-center"><a class="btn btn-primary">mehr laden</a></div>
+                 <div class="filter-action pull-text-center d-none"><a class="btn btn-primary">mehr laden</a></div>
                 <!-- filter action --> 
             </div>
             <!-- profile filter module -->
